@@ -2,6 +2,8 @@ GeneWeb version 3.08
 --------------------
 
 * GeneWeb Service/CGI (gwd)
+   - [28 Aug 00] Added option "-wjf" (= wizard just friend) to permanently
+     prevent all wizards in all data bases to make changes.
    - [26 Aug 00] In descendants page, added male line and female line.
    - [25 Aug 00] In history, added the ability to see the changes only
      by a given wizard.
